--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d4949f">  <td>25/10/14 22:43:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;POSSalesOrderTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.POSSalesOrderTest@4a003cbe]">&gt;&gt;setup</td> 
+<tr bgcolor="d4949f">  <td>25/12/02 22:47:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="POSSalesOrderTest.createSalesOrderTestWithMandatoryFields()[pri:1, instance:com.aidasoftware.qa.testcases.POSSalesOrderTest@4a003cbe]">createSalesOrderTestWithMandatoryFields</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="d4949f">  <td>25/12/02 22:47:08</td>   <td>-25593</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;POSSalesOrderTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.POSSalesOrderTest@4a003cbe]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
 </table>
