--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,34 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8bb695">  <td>25/07/01 00:19:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@25ce9dc4]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="8bb695">  <td>25/07/01 00:20:00</td>   <td>12125</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginWithoutProvidingCredentials()[pri:5, instance:com.aidasoftware.qa.testcases.LoginTest@25ce9dc4]">verifyLoginWithoutProvidingCredentials</td> 
+<tr bgcolor="6bcf94">  <td>25/12/02 21:25:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="POSQuotationTest.createPOSQuotationTestWithMandatoryFields()[pri:1, instance:com.aidasoftware.qa.testcases.POSQuotationTest@247310d0]">createPOSQuotationTestWithMandatoryFields</td> 
   <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="8bb695">  <td>25/07/01 00:19:48</td>   <td>-765</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginWithValidEmailAndInvalidPassword()[pri:4, instance:com.aidasoftware.qa.testcases.LoginTest@25ce9dc4]">verifyLoginWithValidEmailAndInvalidPassword</td> 
+<tr bgcolor="e5f2b9">  <td>25/12/02 21:26:33</td>   <td>75131</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="POSARInvoiceTest.createPOSARInvoiceTestWithMandatoryFields()[pri:1, instance:com.aidasoftware.qa.testcases.POSARInvoiceTest@eadd4fb]">createPOSARInvoiceTestWithMandatoryFields</td> 
   <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="8bb695">  <td>25/07/01 00:20:01</td>   <td>12272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@25ce9dc4]">&lt;&lt;tearDown</td> 
+<tr bgcolor="71f9e9">  <td>25/12/02 21:25:54</td>   <td>36266</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;POSSalesOrderTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.POSSalesOrderTest@4e5ed836]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="8bb695">  <td>25/07/01 00:20:01</td>   <td>12272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@25ce9dc4]">&lt;&lt;tearDown</td> 
+<tr bgcolor="e5f2b9">  <td>25/12/02 21:26:10</td>   <td>51679</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;POSARInvoiceTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.POSARInvoiceTest@eadd4fb]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="8bb695">  <td>25/07/01 00:19:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@25ce9dc4]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="8bb695">  <td>25/07/01 00:19:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@25ce9dc4]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="8bb695">  <td>25/07/01 00:19:37</td>   <td>-11735</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginWithInvalidEmailAndValidPassword()[pri:3, instance:com.aidasoftware.qa.testcases.LoginTest@25ce9dc4]">verifyLoginWithInvalidEmailAndValidPassword</td> 
-  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="8bb695">  <td>25/07/01 00:18:57</td>   <td>-51235</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginWithInvalidCredentials()[pri:2, instance:com.aidasoftware.qa.testcases.LoginTest@25ce9dc4]">verifyLoginWithInvalidCredentials</td> 
-  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="8bb695">  <td>25/07/01 00:18:01</td>   <td>-107184</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginWithValidCredentials(java.lang.String,java.lang.String)[pri:1, instance:com.aidasoftware.qa.testcases.LoginTest@25ce9dc4]">verifyLoginWithValidCredentials</td> 
-  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="8bb695">  <td>25/07/01 00:19:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@25ce9dc4]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="8bb695">  <td>25/07/01 00:20:01</td>   <td>12272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@25ce9dc4]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="8bb695">  <td>25/07/01 00:20:01</td>   <td>12272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@25ce9dc4]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="8bb695">  <td>25/07/01 00:19:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@25ce9dc4]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="8bb695">  <td>25/07/01 00:20:01</td>   <td>12272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@25ce9dc4]">&lt;&lt;tearDown</td> 
+<tr bgcolor="6bcf94">  <td>25/12/02 21:24:51</td>   <td>-27516</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;POSQuotationTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.POSQuotationTest@247310d0]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
 </table>
